force-app/main/default/objects/vlocity_cmt__ProfilingSegment__c/vlocity_cmt__ProfilingSegment__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED. Use Vlocity Attributes.</description>
    <label>Profiling Segment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profiling Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>