force-app/main/default/objects/vlocity_cmt__ProfilingSegment__c/fields/vlocity_cmt__AutoCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AutoCode__c</fullName>
    <displayFormat>SEGMENT-{0}</displayFormat>
    <label>Auto Code</label>
    <type>AutoNumber</type>
</CustomField>