force-app/main/default/objects/vlocity_cmt__ProfilingSegment__c/fields/vlocity_cmt__Code__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Code__c</fullName>
    <description>Short Code for segments</description>
    <externalId>true</externalId>
    <label>Code</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>