force-app/main/default/objects/vlocity_cmt__ProfilingSegment__c/fields/vlocity_cmt__UniqueNameField__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__UniqueNameField__c</fullName>
    <description>unique segment name field ,a concat of parent categoryCode &amp; Name</description>
    <label>UniqueNameField</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>